@@ -17,7 +17,6 @@ AC_PROG_LN_S
 # Checks for libraries.
 AC_CHECK_LIB([echeck], [check_str_m])
 AC_CHECK_LIB([ehbigint], [ehbi_add])
-AC_CHECK_LIB([ehstr], [decimal_to_hex])
 AC_CHECK_LIB([gmp], [mpz_init])
 
 # Checks for header files.
