@@ -3,10 +3,12 @@
 	implement "long mulitiplication" rather than loop-increment
 	reorganize the string parsing, improve naming
 	make Ehbi_log_error macro names less "shouty"
+	remove dependencies on libehstr
 
 	* src/ehbigint.c: rewrite ehbi_mul, reference ehbigint-str.h
 	* src/ehbigint-str.h: "semi-public" functions, not in ehbigint.h
-	* src/ehbigint-str.c: move all the string stuff here
+	* src/ehbigint-str.c: move all the string stuff here,
+		inline hex and decimal from libehstr
 	* src/ehbigint-util.h: move out the string stuff
 	* src/ehbigint-util.c: move out the string stuff
 	* src/ehbigint-log.c: reference ehbigint-str.h
